--- a/index.html
+++ b/index.html
@@ -11,3 +11,48 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+
+  <style>
+    /* Reset CSS básico */
+    *, *::before, *::after {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+  
+    html, body {
+      height: 100%;
+      font-family: sans-serif;
+      background-color: #000; /* opcional, já que você tem um layout escuro */
+      color: #fff;
+    }
+  
+    button {
+      font: inherit;
+      cursor: pointer;
+      border: none;
+      background: none;
+    }
+  
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+  
+    ul, ol {
+      list-style: none;
+    }
+  </style>  
+</html>
